Dodano wywalanie klientów z kolejki
W KolejkaFederate, jak przychodzi klient to ma szanse, że jest zniecierpliwony.

Dla każdego klienta w kolejce, sprawdzane jest czy jest zniecierpliwiony. Jezeli jest to sprawdzane jest, czy czas federata jest wiekszy niz czas zniecierpliwienia i jezeli jest to klient sobie odchodzi z kolejki